<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_igual"
        android:layout_width="159dp"
        android:layout_height="63dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="33dp"
        android:text="@string/btn_igual"
        app:layout_constraintStart_toEndOf="@+id/btn_cero"
        app:layout_constraintTop_toBottomOf="@+id/btn_tres" />

    <Button
        android:id="@+id/btn_cero"
        android:layout_width="68dp"
        android:layout_height="62dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="33dp"
        android:text="@string/btn_cero"
        app:layout_constraintStart_toEndOf="@+id/btn_decimal"
        app:layout_constraintTop_toBottomOf="@+id/btn_dos" />

    <Button
        android:id="@+id/btn_siete"
        android:layout_width="68dp"
        android:layout_height="62dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="39dp"
        android:text="@string/btn_siete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_borrar" />

    <Button
        android:id="@+id/btn_tres"
        android:layout_width="68dp"
        android:layout_height="62dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="31dp"
        android:text="@string/btn_tres"
        app:layout_constraintStart_toEndOf="@+id/btn_dos"
        app:layout_constraintTop_toBottomOf="@+id/btn_seis" />

    <Button
        android:id="@+id/btn_uno"
        android:layout_width="68dp"
        android:layout_height="62dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="31dp"
        android:text="@string/btn_uno"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_cuatro" />

    <Button
        android:id="@+id/btn_dividir"
        android:layout_width="68dp"
        android:layout_height="62dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="38dp"
        android:text="@string/btn_dividir"
        app:layout_constraintStart_toEndOf="@+id/btn_nueve"
        app:layout_constraintTop_toBottomOf="@+id/btn_multiplicar" />

    <Button
        android:id="@+id/btn_dos"
        android:layout_width="68dp"
        android:layout_height="62dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="31dp"
        android:text="@string/btn_dos"
        app:layout_constraintStart_toEndOf="@+id/btn_uno"
        app:layout_constraintTop_toBottomOf="@+id/btn_cinco" />

    <Button
        android:id="@+id/btn_decimal"
        android:layout_width="68dp"
        android:layout_height="62dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="33dp"
        android:text="@string/btn_decimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_uno" />

    <Button
        android:id="@+id/btn_resta"
        android:layout_width="68dp"
        android:layout_height="62dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="33dp"
        android:text="@string/btn_resta"
        app:layout_constraintStart_toEndOf="@+id/btn_seis"
        app:layout_constraintTop_toBottomOf="@+id/btn_dividir" />

    <Button
        android:id="@+id/btn_suma"
        android:layout_width="68dp"
        android:layout_height="62dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="31dp"
        android:text="@string/btn_suma"
        app:layout_constraintStart_toEndOf="@+id/btn_tres"
        app:layout_constraintTop_toBottomOf="@+id/btn_resta" />

    <Button
        android:id="@+id/btn_multiplicar"
        android:layout_width="68dp"
        android:layout_height="62dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="27dp"
        android:text="@string/btn_multiplicar"
        app:layout_constraintStart_toEndOf="@+id/btn_clear"
        app:layout_constraintTop_toBottomOf="@+id/txt_pantalla" />

    <Button
        android:id="@+id/btn_borrar"
        android:layout_width="168dp"
        android:layout_height="61dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="27dp"
        android:text="@string/btn_borrar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_pantalla" />

    <Button
        android:id="@+id/btn_cinco"
        android:layout_width="68dp"
        android:layout_height="62dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="33dp"
        android:text="@string/btn_cinco"
        app:layout_constraintStart_toEndOf="@+id/btn_cuatro"
        app:layout_constraintTop_toBottomOf="@+id/btn_ocho" />

    <Button
        android:id="@+id/btn_ocho"
        android:layout_width="68dp"
        android:layout_height="62dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="39dp"
        android:text="@string/btn_ocho"
        app:layout_constraintStart_toEndOf="@+id/btn_siete"
        app:layout_constraintTop_toBottomOf="@+id/btn_borrar" />

    <Button
        android:id="@+id/btn_cuatro"
        android:layout_width="68dp"
        android:layout_height="62dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="33dp"
        android:text="@string/btn_cuatro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_siete" />

    <Button
        android:id="@+id/btn_clear"
        android:layout_width="68dp"
        android:layout_height="62dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="27dp"
        android:text="@string/btn_clear"
        app:layout_constraintStart_toEndOf="@+id/btn_borrar"
        app:layout_constraintTop_toBottomOf="@+id/txt_pantalla" />

    <Button
        android:id="@+id/btn_seis"
        android:layout_width="68dp"
        android:layout_height="62dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="33dp"
        android:text="@string/btn_seis"
        app:layout_constraintStart_toEndOf="@+id/btn_cinco"
        app:layout_constraintTop_toBottomOf="@+id/btn_nueve" />

    <Button
        android:id="@+id/btn_nueve"
        android:layout_width="68dp"
        android:layout_height="62dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="38dp"
        android:text="@string/btn_nueve"
        app:layout_constraintStart_toEndOf="@+id/btn_ocho"
        app:layout_constraintTop_toBottomOf="@+id/btn_clear" />

    <TextView
        android:id="@+id/txt_pantalla"
        android:layout_width="352dp"
        android:layout_height="65dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="34dp"
        android:text="@string/txt_pantalla"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>